[tool.poetry]
name = "shuttletrack"
version = "0.1.0"
description = "ShuttleTrack — Backend for Badminton & Physical Training Tracker built with FastAPI, PostgreSQL, Celery, and Redis."
authors = ["ShuttleTrack Dev Team <dev@shuttletrack.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"

# --- Core stack ---
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.31.0" }
sqlalchemy = "^2.0.36"
asyncpg = "^0.29.0"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.9"

# --- Data validation & serialization ---
pydantic = "^2.8.2"
pydantic-settings = "^2.3.1"

# --- Authentication & Security ---
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "^4.1.3"

# --- Background tasks & cache ---
celery = "^5.4.0"
redis = "^5.0.1"

# --- Logging & monitoring ---
loguru = "^0.7.2"
structlog = "^24.1.0"

# --- Utilities ---
python-dateutil = "^2.9.0"
httpx = "^0.28.0"
aiohttp = "^3.10.8"
tenacity = "^9.0.0"

# --- Optional extras (analytics, wearable, etc) ---
numpy = "^2.1.2"
pandas = "^2.2.3"

# --- Testing ---
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
factory-boy = "^3.3.0"

# --- Dev tools ---
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.11.2"
pre-commit = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tool configurations ---
[tool.black]
line-length = 100
target-version = ['py312']
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
combine_as_imports = true
include_trailing_comma = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
addopts = "-ra -q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.poetry.scripts]
start = "app.main:run"
worker = "app.core.celery_app:start_worker"